# util

./: .gitattributes  .gitignore  JP_tool2.py  Parsing_pipeline.py  README.md  api_usage.md  ex.html  extract_v1.py  extract_v2.py  extract_v3.py  extract_v4.py  extract_v5.py  extract_v6.py  kipris_api_collector.py  kipris_crawler.py  kipris_crawler_v2.py  kipris_crawler_v3.py  kipris_crawler_v4.py  kipris_crawler_v5.py  kipris_crawler_v6.py  kipris_crawler_v8.py  kipris_debug_html.py  kipris_debug_html_fixed.py  kipris_debug_onclick.py  kipris_diag.py  kipris_final_inspect.py  kipris_inspect.py  pipeline_out.txt  pyproject.toml  sa2_tool1.py  sa2_tool2.py  등록특허전체다운로드.xlsx  임시참고.md  참고.md
.devcontainer/: Dockerfile  devcontainer.json
AMD_parsing/: amd_extract.py
AMD_parsing/output/: 보정서1.json  보정서2.json  보정서3.json  보정서4.json  보정서5.json  보정서7.json
Figure_parsing/: figure_extract.py
JP_Cited_Patents/: jp_extract.py  jp_figure_extract.py
OA_parsing/: refe.md
OA_parsing/output/: OA2_v6.json  (+8 more)
kipris/: 20260323133300.xlsx  api.py  config.py  done.txt  main.py
kipris_data/: README.md  collectors.py  config.py  done.txt  excel.py  utils.py
output/: OA2_v5.json  OA2_v5_summary.txt  OA3_p3_raw.txt  OA3_v5.json  OA3_v5_summary.txt  OA3_v6_summary.txt  OA4_v5.json  OA4_v5_summary.txt  OA_v1.json  OA_v1_fontdiag.json  OA_v2.json  OA_v3.json  OA_v4.json  OA_v6.json  OA_v6_summary.txt  page1_raw.txt  page5_raw.txt  report_v1.md  report_v2.md  report_v3.md  report_v4.md  report_v5.md  report_v6.md  v3_summary.txt  v4_summary.txt
patent_parsing/: patent_extract.py
(+814 files in other folders)
