[project]
name = "pdf-ex"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pymupdf>=1.27.2.2",
    "python-calamine>=0.6.2",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
    "xlsxwriter>=3.2.9",
]
